# starrocks-stream-load

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPING.md  README.md  deny.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sonar.yml
benches/: load_bench.rs
src/: config.rs  error.rs  http.rs  lib.rs  manager.rs  types.rs
test_data/: convert_csv_to_json.py  test_data.sql
tests/: e2e_tests.rs  integration_tests.rs  run_e2e.sh
